# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild: missing
  portage_util import.  Only exposed when intentionally bailing out of a
  phase that is executing.

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh, 
  bin/ebuild-default-functions.sh, bin/ebuild-function.sh, 
  bin/ebuild-isolated-functions.sh: Env clean ups, fixups.  Not compatable
  with doebuild at this commit, since it tries to write back via pipes.  
  To make it compatible (should a revert occur), define an appropriate speak
  funciton.  This commit closes out #52652, #51552, #51370, #46223, potential issues
  from installed ebuilds not functioning correctly due to assuming use/has behave a
  certain way #40993, ultimately #56408.  Essentially, this is all the required
  bash modifications to properly save/restore the env, allowing for ebuilds to 
  be uninstalled despite eclasses/ebuilds no longer existing.  Also contains a 
  fair amount of protective code, since older env savings were incorrect.  Additionally,
  it properly restores variables attributes- export fex, shopt, etc.  This is the basis
  of the ebuild-daemon.

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage_util.py: 
  fixed import issue.

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> portage_dep.py: code
  transfer out of portage.py.  Functions are still in portage.py at this point, 
  removed shortly.  Closes a few bugs with paren_reduce not returning a list, 
  but a tuple also.

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> portage_db_template.py,
  portage_db_flat.py: Addition of get_timestamp, way of requesting -just- the